Initial functionality for signing messages/PSBTs, & broadcasting transactions.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
             <div id="signature-result"></div>
         </section>
 
+        <section id="psbt-creation">
+            <h2>PSBT Creation</h2>
+            <input type="text" id="recipient-address" placeholder="Recipient Address">
+            <input type="number" id="amount" placeholder="Amount (in satoshis)">
+            <button id="create-psbt-btn">Create PSBT</button>
+        </section>
+
         <section id="psbt-handling">
             <h2>PSBT Handling</h2>
             <textarea id="psbt-input" placeholder="Enter PSBT hex"></textarea>
